--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -20,6 +20,6 @@
     <br>
     <img src="{{plot2}}">
     <br>
-    <a href="./predict"><button>Analyze Again!</button></a>
+    <a href="./"><button>Analyze Again!</button></a>
 </body>
 </html>
